flux/apps/dispatcharr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dispatcharr-web
  namespace: multimedia-factory
spec:
  selector:
    app: dispatcharr-web
  ports:
    - port: 9191
      targetPort: 9191
---
apiVersion: v1
kind: Service
metadata:
  name: celery
  namespace: multimedia-factory
spec:
  selector:
    app: celery
  ports:
    - port: 9191
      targetPort: 9191
