flux/apps/dispatcharr/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: dispatcharr
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:9LRT+YWqj9tyUttRiDyGgGa5HlIozZD6lZ9UEJM2gRH2,iv:hfb2YVUFiFQ1vuT0ge8ukbXRfn5s1HNycKRBfhqD6S8=,tag:CWHibXI2C32wZmAsEFdUEA==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: dispatcharr-web
              port: 9191
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAzVVhIU255YmQvUXlKWUJO
[...]
            gAGb4PsBhZT2jzVM7f6Q665/GmvmWrReBzwjB22jLsgGmgOFi3EHyw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-04-24T09:18:02Z"
    mac: ENC[AES256_GCM,data:Fd2jqkwIJh+tejpSOUyecuGVAFcStKf9MCmha64FmSUAJ5n7XQNd73mTRGQY1RDUT/qfsK1vxRjygwXwVcc0j9kaO5srN9d5aqRZOPmXHV+iH79V0CiXyfmTeKs6WfQ/1wCe5mTDEfwYVdNpdeQFFGPQKEyScwjDnTHrpErn4WI=,iv:CMvR+f7TKc4CgukwXSojyw9k/VUSOXg9K0oM/MqdwOk=,tag:odKtr+jqwJbcJxnrIK8tSA==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
